--- a/pwfe/Frontend Mentor/Crowdfunding/style.css
+++ b/pwfe/Frontend Mentor/Crowdfunding/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Commissioner');
+@import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap');
 
 *{
     margin: 0;
@@ -47,43 +47,45 @@ a{
     color: #fff;
 }
 
-main{
-    width: 100%;
-    height: 45%;
-    background-color: aliceblue;
+.meinho{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 38%;
+    left: 33%;
+    height: 100%;
+    width: 35%;
+    background-color: blue;
 }
 
-.container{
+ .first-container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 3%;
-    width: 40%;
-    height: 26%;
     background-color: #fff;
-    position: absolute;
-    top: 40%;
-    left: 30%;
-    border-radius: 10px;
+    border-radius: 15px;
+    width: 100%;
+    height: 23%;
 }
 
 .logo-mastercraft{
     width: 45px;
     height: 45px;
     position: absolute;
-    top: -5%;
-    left: 25%;
+    top: 35.5%;
+    left: 40%;
 }
 
 .mastercraft{
     font-family: 'Commissioner';
     font-size: 30px;
     font-weight: 700;
+    margin-top: 40px;
 }
 
 .beautiful{
     font-weight: 400;
-    padding: 20px;
+    margin-top: 15px;
     font-family: 'Commissioner';
     font-size: 16px;
     color: hsl(0, 0%, 48%);
@@ -94,7 +96,7 @@ main{
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
-    margin-top: 10px;
+    padding: 30px;
 }
 
 .backpro{
@@ -106,4 +108,98 @@ main{
     font-weight: 700;
     border-radius: 30px;
     border: none;
+}
+
+.second-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 20%;
+    background-color: #fff;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
+.numeros{
+    display: flex;
+    flex-direction: row;
+    margin-top: 45px;
+}
+
+.dinheiros{
+    display: flex;
+    flex-direction: column;
+    padding-right: 50px; 
+    border-right: 1px solid hsl(0, 0%, 48%);
+}
+
+.backers{
+    display: flex;
+    flex-direction: column;
+    padding-left: 50px;
+    padding-right: 100px;
+    border-right: 1px solid hsl(0, 0%, 48%);    
+}
+
+.daysleft{
+    display: flex;
+    flex-direction: column;
+    padding-left: 40px;
+    padding-right: 50px;
+}
+
+.negrito{
+    font-family: 'Commissioner';
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.sem-negrito{
+    font-weight: 400;
+    margin-top: 5px;
+    font-family: 'Commissioner';
+    font-size: 14px;
+    color: hsl(0, 0%, 48%);
+}
+
+.third-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 50%;
+    background-color: #fff;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
+.textos{
+    display: flex;
+    flex-direction: column;
+    padding: 35px;
+}
+
+.about{
+    margin-right: 55px;
+    font-size: 18px;
+    font-family: 'Commissioner';
+    font-weight: 700;
+    margin-bottom: 25px;
+}
+
+.textinho{
+    font-weight: 400;
+    margin-bottom: 30px;
+    font-family: 'Commissioner';
+    font-size: 14px;
+    color: hsl(0, 0%, 48%);
+}
+
+.bamboo{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    border: 1px solid hsl(0, 0%, 48%);
+    border-radius: 20px;
 }
