--- a/pwfe/Frontend Mentor/Crowdfunding/style.css
+++ b/pwfe/Frontend Mentor/Crowdfunding/style.css
@@ -10,6 +10,7 @@
 body{
     width: 100vw;
     height: 100vh;
+    background-color: #f3f3f3;
 }
 
 header{
@@ -55,7 +56,6 @@ a{
     left: 33%;
     height: 100%;
     width: 35%;
-    background-color: blue;
 }
 
  .first-container{
@@ -102,7 +102,7 @@ a{
 .backpro{
     background-color: hsl(176, 50%, 47%);
     color: #fff;
-    width: 180px;
+    width: 35%;
     height: 45px;
     font-family: 'Commissioner';
     font-weight: 700;
@@ -113,62 +113,81 @@ a{
 .second-container{
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 100%;
     height: 20%;
     background-color: #fff;
     border-radius: 10px;
-    margin-top: 20px;
+    margin-top: 3%;
+    padding: 5%;
 }
 
 .numeros{
     display: flex;
     flex-direction: row;
-    margin-top: 45px;
 }
 
 .dinheiros{
     display: flex;
     flex-direction: column;
-    padding-right: 50px; 
-    border-right: 1px solid hsl(0, 0%, 48%);
+    width: 33%;
+    height: 75%;
+    border-right: 1px solid hsl(0, 0%, 91%);
+    margin-bottom: 5%;
 }
 
 .backers{
     display: flex;
     flex-direction: column;
-    padding-left: 50px;
-    padding-right: 100px;
-    border-right: 1px solid hsl(0, 0%, 48%);    
+    width: 34%;
+    height: 75%;
+    padding-left: 5%;
+    padding-right: 10%;
+    border-right: 1px solid hsl(0, 0%, 91%);  
 }
 
 .daysleft{
     display: flex;
     flex-direction: column;
-    padding-left: 40px;
-    padding-right: 50px;
+    width: 34%;
+    height: 75%;
+    padding-left: 5%;
+    padding-right: 10%;
 }
 
 .negrito{
     font-family: 'Commissioner';
-    font-size: 30px;
+    font-size: 26px;
     font-weight: 700;
 }
 
 .sem-negrito{
     font-weight: 400;
-    margin-top: 5px;
+    margin-top: 4%;
     font-family: 'Commissioner';
-    font-size: 14px;
+    font-size: 12px;
     color: hsl(0, 0%, 48%);
 }
+
+progress {
+    width: 100%;
+    height: 15px;
+    border-radius: 7px;
+  }
+  progress::-webkit-progress-bar {
+    background-color: rgba(244, 243, 243, 0.801);
+    border-radius: 7px;
+  }
+  progress::-webkit-progress-value {
+    background-color: #3bb4aa;
+    border-radius: 7px;
+  }
 
 .third-container{
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 50%;
+    height: 100%;
     background-color: #fff;
     border-radius: 10px;
     margin-top: 20px;
@@ -190,16 +209,83 @@ a{
 
 .textinho{
     font-weight: 400;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     font-family: 'Commissioner';
     font-size: 14px;
     color: hsl(0, 0%, 48%);
 }
 
-.bamboo{
+.textinho2{
+    font-weight: 400;
+    font-family: 'Commissioner';
+    font-size: 14px;
+    color: hsl(0, 0%, 48%);
+}
+
+.quadrados{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    width: 90%;
+}
+
+.bamboo, .black, .mahogany{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
     padding: 20px;
-    border: 1px solid hsl(0, 0%, 48%);
-    border-radius: 20px;
+    border: 1px solid hsl(0, 0%, 81%);
+    border-radius: 10px;
+    margin-bottom: 30px;
+}
+
+.linha{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
+.title{
+    margin-right: 55px;
+    font-size: 18px;
+    font-family: 'Commissioner';
+    font-weight: 700;
+}
+
+.price{
+    font-weight: 500;
+    font-family: 'Commissioner';
+    font-size: 14px;
+    color: hsl(176, 50%, 47%);
+}
+
+.description{
+    font-weight: 400;
+    margin-bottom: 20px;
+    font-family: 'Commissioner';
+    font-size: 14px;
+    color: hsl(0, 0%, 48%);
+    padding: 10px;
+}
+
+.quantidade{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.reward{
+    background-color: hsl(176, 50%, 47%);
+    color: #fff;
+    width: 30%;
+    height: 45px;
+    font-family: 'Commissioner';
+    font-weight: 700;
+    border-radius: 30px;
+    border: none;   
 }
